resources/tests/parser/good/func_def.gshl
function something(a, b) {
    print("qwe", a, b)
}

function qweads(a) return a

function add(a, b) return a + b
