resources/tests/parser/bad/func_def.gshl
function () {
    print("somethin")
}

function something;

function some("qwe") {
    print("QWE")
}

function qwe(a,) {
    print("zcx")
}

function ()

function


